force-app/main/default/objects/Sub_Offer__c/Sub_Offer__c.object-meta.xml
<CustomObject>
    <label>Sub-Offer</label>
    <nameField>
        <label>Sub-Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>