force-app/main/default/objects/Sub_Offer__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or offer is not active.</errorMessage>
        <filterItems>
            <field>Offer__c.Offer_Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Sub-Offers</relationshipLabel>
    <relationshipName>Sub_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>