force-app/main/default/objects/Sub_Offer__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the sub offer</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>